# MOTRA-Playbook

./: Dockerfile  README.md  bootstrap.sh
.github/workflows/: publish-playbook.yaml
meta/: pyproject.toml
meta/apt/: README.md  motra  motra-database  motra-database_1.0_all.deb  motra-database_1.0_arm64.buildinfo  motra-database_1.0_arm64.changes  motra-default  motra-default_1.0_all.deb  motra-default_1.0_arm64.buildinfo  motra-default_1.0_arm64.changes  motra-hacking  motra-hacking_1.0_all.deb  motra-hacking_1.0_arm64.buildinfo  motra-hacking_1.0_arm64.changes  motra-networking  motra-networking_1.0_all.deb  motra-networking_1.0_arm64.buildinfo  motra-networking_1.0_arm64.changes  motra-perf  motra-perf_1.0_all.deb  motra-perf_1.0_arm64.buildinfo  motra-perf_1.0_arm64.changes  motra_1.0_all.deb  motra_1.0_arm64.buildinfo  motra_1.0_arm64.changes
meta/gitman/: gitman.yml
