[project]
name = "motra-bootstrap"
version = "0.1.0"
description = "installation of any additional tools, primarily gitman for resolving test dependencies"
authors = [
    {name = "Peter Heller"}
]
license = {text = "GPLv3"}
readme = "README.md"
requires-python = ">=3.8,<4.0"
dependencies = [
    "gitman (==3.5.2)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
